--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.32.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.1",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.10.1",
     "react-markdown": "https://esm.sh/react-markdown@9.0.1?bundle"
   }
